--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "whatwg-fetch": "2.0.2"
   },
   "dependencies": {
+    "express": "^4.15.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
