--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-fetch": "^1.7.2"
   },
   "devDependencies": {
+    "@types/fs-ext": "0.0.29",
     "@types/node": "^8.0.25",
     "nodemon": "^1.11.0",
     "ts-node": "^3.3.0",
