--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
   "dependencies": {
     "express": "^4.15.4",
     "inquirer": "^3.2.2",
-    "node-fetch": "^1.7.2",
-    "prompt": "^1.0.0"
-  },
+    "node-fetch": "^1.7.2"
+    },
   "devDependencies": {
     "@types/fs-ext": "0.0.29",
     "@types/node": "^8.0.25",
